# FTE-Agent

./: $null  .gitignore  Personal_AI_Employee_Hackathon.md  QWEN.md
FTE/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_manual.py
FTE/docs/: api-reference.md  api-skills.md  deployment-checklist.md  disaster-recovery.md  endurance-test-results.md  load-test-results.md  quickstart.md  runbook.md  security.md
FTE/docs/architecture/: gold-tier-architecture.md
FTE/docs/runbooks/: cloud-vm-setup.md
FTE/scripts/: disable-ceo-briefing.bat  remove-ceo-briefing.bat  schedule-ceo-briefing.bat
FTE/scripts/deploy/: configure-security.sh  configure-systemd.sh  fte-agent.service
FTE/src/: __init__.py  approval_handler.py  audit_logger.py  base_watcher.py  filesystem_watcher.py  process_manager.py  skills.py
FTE/src/api/: health_endpoint.py
FTE/src/health/: __init__.py  alerting.py  endpoint.py  monitoring.py
FTE/src/logging/: __init__.py  log_aggregator.py
FTE/src/metrics/: __init__.py  collector.py
FTE/src/models/: __init__.py  ceo_briefing.py  task_state.py
FTE/src/services/: __init__.py  alerting.py  dashboard.py  odoo_fallback.py  orchestrator.py  rate_limiter.py  social_fallback.py
FTE/src/skills/: __init__.py  audit_skills.py  base_skill.py  briefing_skills.py  create_plan.py  dlq_skills.py  generate_briefing.py  linkedin_posting.py  ralph_wiggum_skills.py  request_approval.py  send_email.py  skills_index.md
FTE/tests/: __init__.py
FTE/vault/: Company_Handbook.md  Dashboard.md  Dashboard.md.template
(+199 files in other folders)
